Prevent code wrapping

--- a/src/components/prism-theme.css
+++ b/src/components/prism-theme.css
@@ -13,6 +13,7 @@ pre[class*='language-'] {
 	white-space: pre;
 	word-spacing: normal;
 	word-break: normal;
+	word-wrap: normal;
 
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
